force-app/main/default/objects/Product2/fields/Allergens__c.field-meta.xml
<CustomField>
    <fullName>Allergens__c</fullName>
    <label>Allergens</label>
    <length>255</length>
    <type>Text</type>
</CustomField>