force-app/main/default/objects/Product2/fields/AlternativeName__c.field-meta.xml
<CustomField>
    <fullName>AlternativeName__c</fullName>
    <description>CRM-774 Carrying over name to a custom field on first change</description>
    <label>Alternative Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>