force-app/main/default/objects/Product2/fields/BaseProductCode__c.field-meta.xml
<CustomField>
    <fullName>BaseProductCode__c</fullName>
    <label>Base Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>