force-app/main/default/objects/Product2/fields/BaseUnitCode__c.field-meta.xml
<CustomField>
    <fullName>BaseUnitCode__c</fullName>
    <label>Base Unit Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>