force-app/main/default/objects/Product2/fields/BioFairTradeProduct__c.field-meta.xml
<CustomField>
    <fullName>BioFairTradeProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fairtrade Product</label>
    <type>Checkbox</type>
</CustomField>