force-app/main/default/objects/Product2/fields/BioProduct__c.field-meta.xml
<CustomField>
    <fullName>BioProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bio Product</label>
    <type>Checkbox</type>
</CustomField>