force-app/main/default/objects/Product2/fields/BoxCount__c.field-meta.xml
<CustomField>
    <fullName>BoxCount__c</fullName>
    <label>Box Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>