force-app/main/default/objects/Product2/fields/BrandId__c.field-meta.xml
<CustomField>
    <fullName>BrandId__c</fullName>
    <formula>BrandWebshop__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand ID</label>
    <type>Text</type>
</CustomField>