force-app/main/default/objects/Product2/fields/BrandName__c.field-meta.xml
<CustomField>
    <fullName>BrandName__c</fullName>
    <formula>BrandWebshop__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>