force-app/main/default/objects/Product2/fields/BrandStaticSlider__c.field-meta.xml
<CustomField>
    <fullName>BrandStaticSlider__c</fullName>
    <formula>BrandWebshop__r.WebshopStaticSlider__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Static Slider</label>
    <type>Text</type>
</CustomField>