force-app/main/default/objects/Product2/fields/BrandWebshop__c.field-meta.xml
<CustomField>
    <fullName>BrandWebshop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Webshop</label>
    <referenceTo>WebshopBrand__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>