force-app/main/default/objects/Product2/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductClass</valueSetName>
    </valueSet>
</CustomField>