force-app/main/default/objects/Product2/fields/CoffeeTaxRelevant__c.field-meta.xml
<CustomField>
    <fullName>CoffeeTaxRelevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coffee Tax Relevant</label>
    <type>Checkbox</type>
</CustomField>