force-app/main/default/objects/Product2/fields/CountSales__c.field-meta.xml
<CustomField>
    <fullName>CountSales__c</fullName>
    <label>Count Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>