force-app/main/default/objects/Product2/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <label>Description 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>