force-app/main/default/objects/Product2/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description ERP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>