force-app/main/default/objects/Product2/fields/Discountable__c.field-meta.xml
<CustomField>
    <fullName>Discountable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discountable</label>
    <type>Checkbox</type>
</CustomField>