force-app/main/default/objects/Product2/fields/DiscountCorrespondsToBaseDevice__c.field-meta.xml
<CustomField>
    <fullName>DiscountCorrespondsToBaseDevice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JJDSF-170</description>
    <label>Discount corresponds to Base device</label>
    <type>Checkbox</type>
</CustomField>