force-app/main/default/objects/Product2/fields/Ean__c.field-meta.xml
<CustomField>
    <fullName>Ean__c</fullName>
    <externalId>true</externalId>
    <label>EAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>