force-app/main/default/objects/Product2/fields/EANCategory__c.field-meta.xml
<CustomField>
    <fullName>EANCategory__c</fullName>
    <label>EAN Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E5</fullName>
                <label>Freshness EAN, Var. Weight, Ind. Item No. 5-digit</label>
            </value>
            <value>
                <fullName>EA</fullName>
                <label>Freshness EAN, Var. Price, Ind. Item No. 4-digit</label>
            </value>
            <value>
                <fullName>HE</fullName>
                <label>Manufacturer EAN</label>
            </value>
            <value>
                <fullName>HK</fullName>
                <label>Short Manufacturer EAN</label>
            </value>
            <value>
                <fullName>I6</fullName>
                <label>ITF Code - 16-digit</label>
            </value>
            <value>
                <fullName>IC</fullName>
                <label>ITF Code</label>
            </value>
            <value>
                <fullName>IE</fullName>
                <label>Instore EAN (Internal Assignment Possible)</label>
            </value>
            <value>
                <fullName>IK</fullName>
                <label>Short Instore EAN (Internal Assignment Possible)</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Freshness EAN, Var. Price, SAN</label>
            </value>
            <value>
                <fullName>SG</fullName>
                <label>Freshness EAN, Var. Price, SAN + Package No.</label>
            </value>
            <value>
                <fullName>UC</fullName>
                <label>UPC Code</label>
            </value>
            <value>
                <fullName>VC</fullName>
                <label>Velocity Code</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>