force-app/main/default/objects/Product2/fields/ERPLastChanged__c.field-meta.xml
<CustomField>
    <fullName>ERPLastChanged__c</fullName>
    <label>ERP Last Changed</label>
    <type>DateTime</type>
</CustomField>