force-app/main/default/objects/Product2/fields/ERPLastSync__c.field-meta.xml
<CustomField>
    <fullName>ERPLastSync__c</fullName>
    <label>ERP Last Sync</label>
    <type>DateTime</type>
</CustomField>