force-app/main/default/objects/Product2/fields/ERPProductGroupLong__c.field-meta.xml
<CustomField>
    <fullName>ERPProductGroupLong__c</fullName>
    <label>ERP Product Group (Long)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10100101</fullName>
                <label>Green Coffee Type</label>
            </value>
            <value>
                <fullName>10100102</fullName>
                <label>Green Coffee Type FT</label>
            </value>
            <value>
                <fullName>10100103</fullName>
                <label>Green Coffee Type RFA</label>
            </value>
            <value>
                <fullName>10200110</fullName>
                <label>Green Coffee Blends General</label>
            </value>
            <value>
                <fullName>10200111</fullName>
                <label>Green Coffee Blends Mild</label>
            </value>
            <value>
                <fullName>10200112</fullName>
                <label>Green Coffee Blends Decaf</label>
            </value>
            <value>
                <fullName>10200113</fullName>
                <label>Green Coffee Blends FT</label>
            </value>
            <value>
                <fullName>10200114</fullName>
                <label>Green Coffee Blends RFA</label>
            </value>
            <value>
                <fullName>20100120</fullName>
                <label>Roasted Coffee Types General</label>
            </value>
            <value>
                <fullName>20100121</fullName>
                <label>Roasted Coffee Types Mild</label>
            </value>
            <value>
                <fullName>20100122</fullName>
                <label>Roasted Coffee Types Decaf</label>
            </value>
            <value>
                <fullName>20100123</fullName>
                <label>Roasted Coffee Types FT</label>
            </value>
            <value>
                <fullName>20100124</fullName>
                <label>Roasted Coffee Types RFA</label>
            </value>
            <value>
                <fullName>20100125</fullName>
                <label>Roasted Coffee Types Mixed</label>
            </value>
            <value>
                <fullName>20200130</fullName>
                <label>Ground Coffee Types General</label>
            </value>
            <value>
                <fullName>20200131</fullName>
                <label>Ground Coffee Types Mild</label>
            </value>
            <value>
                <fullName>20200132</fullName>
                <label>Ground Coffee Types Decaf</label>
            </value>
            <value>
                <fullName>20200133</fullName>
                <label>Ground Coffee Types FT</label>
            </value>
            <value>
                <fullName>20200134</fullName>
                <label>Ground Coffee Types RFA</label>
            </value>
            <value>
                <fullName>20300180</fullName>
                <label>Coffee Extract</label>
            </value>
            <value>
                <fullName>30100201</fullName>
                <label>Packaging Outer Cartons</label>
            </value>
            <value>
                <fullName>30100202</fullName>
                <label>Packaging Trays</label>
            </value>
            <value>
                <fullName>30100203</fullName>
                <label>Packaging Corrugated Board Cut</label>
            </value>
            <value>
                <fullName>30100204</fullName>
                <label>Packaging Folding Box</label>
            </value>
            <value>
                <fullName>30100205</fullName>
                <label>Packaging Telescopic Box</label>
            </value>
            <value>
                <fullName>30100206</fullName>
                <label>Packaging Folding Cartons</label>
            </value>
            <value>
                <fullName>30100207</fullName>
                <label>Packaging Paper Cut</label>
            </value>
            <value>
                <fullName>30100208</fullName>
                <label>Packaging Intermediate Cardboard</label>
            </value>
            <value>
                <fullName>30100209</fullName>
                <label>Packaging Cover Cap Cardboard</label>
            </value>
            <value>
                <fullName>30100220</fullName>
                <label>Packaging Composite Foil w/ Alu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>