force-app/main/default/objects/Product2/fields/ERPProductGroupShort__c.field-meta.xml
<CustomField>
    <fullName>ERPProductGroupShort__c</fullName>
    <label>ERP Product Group (Short)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10100101</fullName>
                <label>Green Coffee Type</label>
            </value>
            <value>
                <fullName>10100102</fullName>
                <label>Green Coffee Type FT</label>
            </value>
            <value>
                <fullName>10100103</fullName>
                <label>Green Coffee Type RFA</label>
            </value>
            <value>
                <fullName>10200110</fullName>
                <label>Green Coffee Blend Gen.</label>
            </value>
            <value>
                <fullName>10200111</fullName>
                <label>Green Coffee Blend Mild</label>
            </value>
            <value>
                <fullName>10200112</fullName>
                <label>Green Coffee Blend Decaf</label>
            </value>
            <value>
                <fullName>10200113</fullName>
                <label>Green Coffee Blend FT</label>
            </value>
            <value>
                <fullName>10200114</fullName>
                <label>Green Coffee Blend RFA</label>
            </value>
            <value>
                <fullName>20100120</fullName>
                <label>Roasted Coffee Gen.</label>
            </value>
            <value>
                <fullName>20100121</fullName>
                <label>Roasted Coffee Mild</label>
            </value>
            <value>
                <fullName>20100122</fullName>
                <label>Roasted Coffee Decaf</label>
            </value>
            <value>
                <fullName>20100123</fullName>
                <label>Roasted Coffee FT</label>
            </value>
            <value>
                <fullName>20100124</fullName>
                <label>Roasted Coffee RFA</label>
            </value>
            <value>
                <fullName>20100125</fullName>
                <label>Roasted Coffee Mixed</label>
            </value>
            <value>
                <fullName>20200130</fullName>
                <label>Ground Coffee Gen.</label>
            </value>
            <value>
                <fullName>20200131</fullName>
                <label>Ground Coffee Mild</label>
            </value>
            <value>
                <fullName>20200132</fullName>
                <label>Ground Coffee Decaf</label>
            </value>
            <value>
                <fullName>20200133</fullName>
                <label>Ground Coffee FT</label>
            </value>
            <value>
                <fullName>20200134</fullName>
                <label>Ground Coffee RFA</label>
            </value>
            <value>
                <fullName>20300180</fullName>
                <label>Coffee Extract</label>
            </value>
            <value>
                <fullName>30100201</fullName>
                <label>Outer Cartons</label>
            </value>
            <value>
                <fullName>30100202</fullName>
                <label>Trays</label>
            </value>
            <value>
                <fullName>30100203</fullName>
                <label>Corrugated Board Cut</label>
            </value>
            <value>
                <fullName>30100204</fullName>
                <label>Folding Box</label>
            </value>
            <value>
                <fullName>30100205</fullName>
                <label>Telescopic Box</label>
            </value>
            <value>
                <fullName>30100206</fullName>
                <label>Folding Cartons</label>
            </value>
            <value>
                <fullName>30100207</fullName>
                <label>Paper Cut</label>
            </value>
            <value>
                <fullName>30100208</fullName>
                <label>Intermediate Cardboard</label>
            </value>
            <value>
                <fullName>30100209</fullName>
                <label>Cover Cap Cardboard</label>
            </value>
            <value>
                <fullName>30100220</fullName>
                <label>Composite Foil w/ Alu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>