force-app/main/default/objects/Product2/fields/ERPProductNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPProductNumber__c</fullName>
    <externalId>true</externalId>
    <label>ERP Product Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>