force-app/main/default/objects/Product2/fields/ExemptFromSurcharges__c.field-meta.xml
<CustomField>
    <fullName>ExemptFromSurcharges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt From Surcharges</label>
    <type>Checkbox</type>
</CustomField>