force-app/main/default/objects/Product2/fields/ExternalProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ExternalProductGroup__c</fullName>
    <label>External Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BB</fullName>
                <label>Big Bag</label>
            </value>
            <value>
                <fullName>BTL</fullName>
                <label>Bag</label>
            </value>
            <value>
                <fullName>BULK</fullName>
                <label>Bulk in container</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>Chep Pallet</label>
            </value>
            <value>
                <fullName>CH12</fullName>
                <label>Chep Half Pallet</label>
            </value>
            <value>
                <fullName>CH14</fullName>
                <label>Chep Quarter Pallet</label>
            </value>
            <value>
                <fullName>DS</fullName>
                <label>Can</label>
            </value>
            <value>
                <fullName>FIB</fullName>
                <label>Filter Bag</label>
            </value>
            <value>
                <fullName>FLS</fullName>
                <label>Flat Bag</label>
            </value>
            <value>
                <fullName>FS</fullName>
                <label>Folding Box (FS)</label>
            </value>
            <value>
                <fullName>FST</fullName>
                <label>Folding Box (FST)</label>
            </value>
            <value>
                <fullName>GED</fullName>
                <label>Steamed Green Coffee</label>
            </value>
            <value>
                <fullName>GL</fullName>
                <label>Glass</label>
            </value>
            <value>
                <fullName>KAP</fullName>
                <label>Capsule</label>
            </value>
            <value>
                <fullName>KP</fullName>
                <label>Portion Can Condensed Milk</label>
            </value>
            <value>
                <fullName>KPS</fullName>
                <label>Portion Can Coffee</label>
            </value>
            <value>
                <fullName>KT</fullName>
                <label>Tea String</label>
            </value>
            <value>
                <fullName>MAH</fullName>
                <label>Ground Coffee</label>
            </value>
            <value>
                <fullName>MIX</fullName>
                <label>Mix Box</label>
            </value>
            <value>
                <fullName>NKOMM</fullName>
                <label>Not Picked</label>
            </value>
            <value>
                <fullName>PB</fullName>
                <label>Poly Bag</label>
            </value>
            <value>
                <fullName>PBB</fullName>
                <label>Poly Bag (Bean)</label>
            </value>
            <value>
                <fullName>PBM</fullName>
                <label>Poly Bag (Ground Coffee)</label>
            </value>
            <value>
                <fullName>PCH</fullName>
                <label>Pouches</label>
            </value>
            <value>
                <fullName>PDS</fullName>
                <label>Pads</label>
            </value>
            <value>
                <fullName>POD</fullName>
                <label>Pods</label>
            </value>
            <value>
                <fullName>ROE</fullName>
                <label>Roasted Coffee</label>
            </value>
            <value>
                <fullName>ROH</fullName>
                <label>Green Coffee Quality</label>
            </value>
            <value>
                <fullName>ROM</fullName>
                <label>Green Coffee Blend</label>
            </value>
            <value>
                <fullName>SACK</fullName>
                <label>Bags in Container</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>