force-app/main/default/objects/Product2/fields/GenerateConditionsSheet__c.field-meta.xml
<CustomField>
    <fullName>GenerateConditionsSheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Conditions Sheet</label>
    <type>Checkbox</type>
</CustomField>