force-app/main/default/objects/Product2/fields/GTIN__c.field-meta.xml
<CustomField>
    <fullName>GTIN__c</fullName>
    <externalId>true</externalId>
    <label>GTIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>