force-app/main/default/objects/Product2/fields/IndustrySector__c.field-meta.xml
<CustomField>
    <fullName>IndustrySector__c</fullName>
    <label>Industry Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>