force-app/main/default/objects/Product2/fields/Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Ingredients__c</fullName>
    <label>Ingredients</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>