force-app/main/default/objects/Product2/fields/IsMachine__c.field-meta.xml
<CustomField>
    <fullName>IsMachine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Machine</label>
    <type>Checkbox</type>
</CustomField>