force-app/main/default/objects/Product2/fields/IsMaschine__c.field-meta.xml
<CustomField>
    <fullName>IsMaschine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Maschine [LÖSCHEN]</label>
    <type>Checkbox</type>
</CustomField>