force-app/main/default/objects/Product2/fields/ItemCategoryGroup__c.field-meta.xml
<CustomField>
    <fullName>ItemCategoryGroup__c</fullName>
    <label>Item Category Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
                <label>Make-to-order Production</label>
            </value>
            <value>
                <fullName>0002</fullName>
                <label>Configuration</label>
            </value>
            <value>
                <fullName>0004</fullName>
                <label>Make-to-order / Assembly</label>
            </value>
            <value>
                <fullName>0005</fullName>
                <label>Milestone Billing</label>
            </value>
            <value>
                <fullName>ALEN</fullName>
                <label>ALE Standard Position</label>
            </value>
            <value>
                <fullName>ALES</fullName>
                <label>ALE Third-Party Position</label>
            </value>
            <value>
                <fullName>BADS</fullName>
                <label>Subcontracting (DS)</label>
            </value>
            <value>
                <fullName>BANC</fullName>
                <label>Individual Purchase Order</label>
            </value>
            <value>
                <fullName>BANS</fullName>
                <label>Third-Party Position</label>
            </value>
            <value>
                <fullName>DIEN</fullName>
                <label>Service with Delivery Alt.</label>
            </value>
            <value>
                <fullName>ERLA</fullName>
                <label>Structure / Top Material (ERLA)</label>
            </value>
            <value>
                <fullName>ERLB</fullName>
                <label>Structure / Top Material (ERLB)</label>
            </value>
            <value>
                <fullName>GG01</fullName>
                <label>Configurable Software Product</label>
            </value>
            <value>
                <fullName>GG02</fullName>
                <label>Configuration Service</label>
            </value>
            <value>
                <fullName>GG04</fullName>
                <label>Configurable Package</label>
            </value>
            <value>
                <fullName>GG05</fullName>
                <label>Product List</label>
            </value>
            <value>
                <fullName>LEAS</fullName>
                <label>Leasing</label>
            </value>
            <value>
                <fullName>LEER</fullName>
                <label>Empties</label>
            </value>
            <value>
                <fullName>LEIC</fullName>
                <label>Service w/o Delivery Config.</label>
            </value>
            <value>
                <fullName>LEIH</fullName>
                <label>Returnable Packaging / Empties</label>
            </value>
            <value>
                <fullName>LEIS</fullName>
                <label>Service w/o Delivery</label>
            </value>
            <value>
                <fullName>LO01</fullName>
                <label>Leasing Early Extension Option</label>
            </value>
            <value>
                <fullName>LO02</fullName>
                <label>Leasing Return Option</label>
            </value>
            <value>
                <fullName>LO03</fullName>
                <label>Leasing Early Purchase Option</label>
            </value>
            <value>
                <fullName>LO04</fullName>
                <label>Leasing Purchase Option</label>
            </value>
            <value>
                <fullName>LO06</fullName>
                <label>Leasing Extension Option</label>
            </value>
            <value>
                <fullName>LO08</fullName>
                <label>Leasing Subsequent Option</label>
            </value>
            <value>
                <fullName>LO09</fullName>
                <label>Leasing Billing Option</label>
            </value>
            <value>
                <fullName>LO11</fullName>
                <label>Leasing Early Extension Option w/o B</label>
            </value>
            <value>
                <fullName>LO12</fullName>
                <label>Leasing Return Option w/o B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>