force-app/main/default/objects/Product2/fields/LicenseProduct__c.field-meta.xml
<CustomField>
    <fullName>LicenseProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Product</label>
    <type>Checkbox</type>
</CustomField>