force-app/main/default/objects/Product2/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <label>List Price</label>
    <precision>16</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>