force-app/main/default/objects/Product2/fields/LowestConditionForSalesAreaManager__c.field-meta.xml
<CustomField>
    <fullName>LowestConditionForSalesAreaManager__c</fullName>
    <label>Lowest Condition for Sales Area Manager</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>