force-app/main/default/objects/Product2/fields/LowestConditionForSalesManager__c.field-meta.xml
<CustomField>
    <fullName>LowestConditionForSalesManager__c</fullName>
    <label>Lowest Condition for Sales Manager</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>