force-app/main/default/objects/Product2/fields/LowestConditionForVending__c.field-meta.xml
<CustomField>
    <fullName>LowestConditionForVending__c</fullName>
    <label>Lowest Condition for Vending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>