force-app/main/default/objects/Product2/fields/LVSRelevant__c.field-meta.xml
<CustomField>
    <fullName>LVSRelevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LVS Relevant</label>
    <type>Checkbox</type>
</CustomField>