force-app/main/default/objects/Product2/fields/MachinePrice__c.field-meta.xml
<CustomField>
    <fullName>MachinePrice__c</fullName>
    <label>Machine Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>