force-app/main/default/objects/Product2/fields/MachineProductSeries__c.field-meta.xml
<CustomField>
    <fullName>MachineProductSeries__c</fullName>
    <externalId>true</externalId>
    <label>Machine Product Series</label>
    <length>255</length>
    <type>Text</type>
</CustomField>