force-app/main/default/objects/Product2/fields/MarkedforDeletion__c.field-meta.xml
<CustomField>
    <fullName>MarkedforDeletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked for Deletion</label>
    <type>Checkbox</type>
</CustomField>