force-app/main/default/objects/Product2/fields/MaterialType__c.field-meta.xml
<CustomField>
    <fullName>MaterialType__c</fullName>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZFER</fullName>
            </value>
            <value>
                <fullName>ZFET</fullName>
            </value>
            <value>
                <fullName>ZHAW</fullName>
            </value>
            <value>
                <fullName>ZHWT</fullName>
            </value>
            <value>
                <fullName>ZWRB</fullName>
            </value>
            <value>
                <fullName>ZKON</fullName>
            </value>
            <value>
                <fullName>ZDIN</fullName>
            </value>
            <value>
                <fullName>ZERM</fullName>
            </value>
            <value>
                <fullName>ZESA</fullName>
            </value>
            <value>
                <fullName>ZHAL</fullName>
            </value>
            <value>
                <fullName>ZHAT</fullName>
            </value>
            <value>
                <fullName>ZHAX</fullName>
            </value>
            <value>
                <fullName>ZHIB</fullName>
            </value>
            <value>
                <fullName>ZKAF</fullName>
            </value>
            <value>
                <fullName>ZLEI</fullName>
            </value>
            <value>
                <fullName>ZNLG</fullName>
            </value>
            <value>
                <fullName>ZROK</fullName>
            </value>
            <value>
                <fullName>ZROT</fullName>
            </value>
            <value>
                <fullName>ZSRV</fullName>
            </value>
            <value>
                <fullName>ZUBW</fullName>
            </value>
            <value>
                <fullName>ZVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>