force-app/main/default/objects/Product2/fields/MinimumPrice__c.field-meta.xml
<CustomField>
    <fullName>MinimumPrice__c</fullName>
    <formula>PreviewPrice__c  * $CustomMetadata.FactorMinimumPrice__mdt.FactorPreviewPrice.FactorMinimumPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>