force-app/main/default/objects/Product2/fields/MoevenpickClassification__c.field-meta.xml
<CustomField>
    <fullName>MoevenpickClassification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mövenpick Classification</label>
    <type>Checkbox</type>
</CustomField>