force-app/main/default/objects/Product2/fields/NetWeight__c.field-meta.xml
<CustomField>
    <fullName>NetWeight__c</fullName>
    <label>Net Weight</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>